--- a/package.json
+++ b/package.json
@@ -29,10 +29,25 @@
   "homepage": "https://getuikit.com",
   "devDependencies": {
     "archiver": "^2.0.0",
+    "browser-sync": "^2.18.13",
     "buble": "^0.15.1",
     "buble-loader": "^0.4.1",
     "clean-css": "^4.1.7",
     "glob": "^7.1.2",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-clean-css": "^3.8.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-header": "^1.8.9",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.2",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.1.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
     "html-loader": "^0.5.1",
     "jquery": "^3.2.1",
     "less": "^2.7.1",
@@ -48,6 +63,7 @@
     "rollup-plugin-replace": "^1.1.1",
     "rtlcss": "^2.2.0",
     "shortid": "^2.2.8",
+    "tiny-lr": "^1.0.5",
     "uglify-js": "^3.0.27",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
